@@ -7424,7 +7424,7 @@ name|Double
 argument_list|(
 name|value
 operator|.
-name|floatValue
+name|doubleValue
 argument_list|()
 operator|+
 name|Double
@@ -7434,7 +7434,7 @@ argument_list|(
 name|gap
 argument_list|)
 operator|.
-name|floatValue
+name|doubleValue
 argument_list|()
 argument_list|)
 return|;
@@ -7588,7 +7588,7 @@ name|Long
 argument_list|(
 name|value
 operator|.
-name|intValue
+name|longValue
 argument_list|()
 operator|+
 name|Long
@@ -7598,7 +7598,7 @@ argument_list|(
 name|gap
 argument_list|)
 operator|.
-name|intValue
+name|longValue
 argument_list|()
 argument_list|)
 return|;
