@@ -3666,6 +3666,228 @@ literal|"range_facet_sd"
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testNumericRangeFacetsOverflowTrieDouble
+specifier|public
+name|void
+name|testNumericRangeFacetsOverflowTrieDouble
+parameter_list|()
+block|{
+name|helpTestNumericRangeFacetsDoubleOverflow
+argument_list|(
+literal|"range_facet_d"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testNumericRangeFacetsOverflowSortableDouble
+specifier|public
+name|void
+name|testNumericRangeFacetsOverflowSortableDouble
+parameter_list|()
+block|{
+name|helpTestNumericRangeFacetsDoubleOverflow
+argument_list|(
+literal|"range_facet_sd"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|helpTestNumericRangeFacetsDoubleOverflow
+specifier|private
+name|void
+name|helpTestNumericRangeFacetsDoubleOverflow
+parameter_list|(
+specifier|final
+name|String
+name|fieldName
+parameter_list|)
+block|{
+specifier|final
+name|String
+name|f
+init|=
+name|fieldName
+decl_stmt|;
+specifier|final
+name|String
+name|pre
+init|=
+literal|"//lst[@name='facet_ranges']/lst[@name='"
+operator|+
+name|f
+operator|+
+literal|"']/lst[@name='counts']"
+decl_stmt|;
+specifier|final
+name|String
+name|meta
+init|=
+name|pre
+operator|+
+literal|"/../"
+decl_stmt|;
+name|String
+name|start
+init|=
+literal|"0.0"
+decl_stmt|;
+name|String
+name|gap
+init|=
+operator|(
+operator|new
+name|Double
+argument_list|(
+operator|(
+name|double
+operator|)
+name|Float
+operator|.
+name|MAX_VALUE
+argument_list|)
+operator|)
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|String
+name|end
+init|=
+operator|(
+operator|new
+name|Double
+argument_list|(
+operator|(
+operator|(
+name|double
+operator|)
+name|Float
+operator|.
+name|MAX_VALUE
+operator|)
+operator|*
+literal|3D
+argument_list|)
+operator|)
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|String
+name|mid
+init|=
+operator|(
+operator|new
+name|Double
+argument_list|(
+operator|(
+operator|(
+name|double
+operator|)
+name|Float
+operator|.
+name|MAX_VALUE
+operator|)
+operator|*
+literal|2D
+argument_list|)
+operator|)
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|assertQ
+argument_list|(
+name|f
+operator|+
+literal|": checking counts for lower"
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:[30 TO 60]"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet.range"
+argument_list|,
+name|f
+argument_list|,
+literal|"facet.range.start"
+argument_list|,
+name|start
+argument_list|,
+literal|"facet.range.end"
+argument_list|,
+name|end
+argument_list|,
+literal|"facet.range.gap"
+argument_list|,
+name|gap
+argument_list|,
+literal|"facet.range.other"
+argument_list|,
+literal|"all"
+argument_list|,
+literal|"facet.range.include"
+argument_list|,
+literal|"lower"
+argument_list|)
+argument_list|,
+literal|"*[count("
+operator|+
+name|pre
+operator|+
+literal|"/int)=3]"
+argument_list|,
+name|pre
+operator|+
+literal|"/int[@name='"
+operator|+
+name|start
+operator|+
+literal|"'][.='6'  ]"
+argument_list|,
+name|pre
+operator|+
+literal|"/int[@name='"
+operator|+
+name|mid
+operator|+
+literal|"'][.='0'  ]"
+comment|//
+argument_list|,
+name|meta
+operator|+
+literal|"/double[@name='end' ][.='"
+operator|+
+name|end
+operator|+
+literal|"']"
+argument_list|,
+name|meta
+operator|+
+literal|"/int[@name='before' ][.='0']"
+argument_list|,
+name|meta
+operator|+
+literal|"/int[@name='after'  ][.='0']"
+argument_list|,
+name|meta
+operator|+
+literal|"/int[@name='between'][.='6']"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|helpTestFractionalNumberRangeFacets
 specifier|private
 name|void
@@ -4475,6 +4697,228 @@ block|{
 name|helpTestWholeNumberRangeFacets
 argument_list|(
 literal|"range_facet_sl"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testNumericRangeFacetsOverflowTrieLong
+specifier|public
+name|void
+name|testNumericRangeFacetsOverflowTrieLong
+parameter_list|()
+block|{
+name|helpTestNumericRangeFacetsLongOverflow
+argument_list|(
+literal|"range_facet_l"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testNumericRangeFacetsOverflowSortableLong
+specifier|public
+name|void
+name|testNumericRangeFacetsOverflowSortableLong
+parameter_list|()
+block|{
+name|helpTestNumericRangeFacetsLongOverflow
+argument_list|(
+literal|"range_facet_sl"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|helpTestNumericRangeFacetsLongOverflow
+specifier|private
+name|void
+name|helpTestNumericRangeFacetsLongOverflow
+parameter_list|(
+specifier|final
+name|String
+name|fieldName
+parameter_list|)
+block|{
+specifier|final
+name|String
+name|f
+init|=
+name|fieldName
+decl_stmt|;
+specifier|final
+name|String
+name|pre
+init|=
+literal|"//lst[@name='facet_ranges']/lst[@name='"
+operator|+
+name|f
+operator|+
+literal|"']/lst[@name='counts']"
+decl_stmt|;
+specifier|final
+name|String
+name|meta
+init|=
+name|pre
+operator|+
+literal|"/../"
+decl_stmt|;
+name|String
+name|start
+init|=
+literal|"0"
+decl_stmt|;
+name|String
+name|gap
+init|=
+operator|(
+operator|new
+name|Long
+argument_list|(
+operator|(
+name|long
+operator|)
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+operator|)
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|String
+name|end
+init|=
+operator|(
+operator|new
+name|Long
+argument_list|(
+operator|(
+operator|(
+name|long
+operator|)
+name|Integer
+operator|.
+name|MAX_VALUE
+operator|)
+operator|*
+literal|3L
+argument_list|)
+operator|)
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|String
+name|mid
+init|=
+operator|(
+operator|new
+name|Long
+argument_list|(
+operator|(
+operator|(
+name|long
+operator|)
+name|Integer
+operator|.
+name|MAX_VALUE
+operator|)
+operator|*
+literal|2L
+argument_list|)
+operator|)
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|assertQ
+argument_list|(
+name|f
+operator|+
+literal|": checking counts for lower"
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:[30 TO 60]"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet.range"
+argument_list|,
+name|f
+argument_list|,
+literal|"facet.range.start"
+argument_list|,
+name|start
+argument_list|,
+literal|"facet.range.end"
+argument_list|,
+name|end
+argument_list|,
+literal|"facet.range.gap"
+argument_list|,
+name|gap
+argument_list|,
+literal|"facet.range.other"
+argument_list|,
+literal|"all"
+argument_list|,
+literal|"facet.range.include"
+argument_list|,
+literal|"lower"
+argument_list|)
+argument_list|,
+literal|"*[count("
+operator|+
+name|pre
+operator|+
+literal|"/int)=3]"
+argument_list|,
+name|pre
+operator|+
+literal|"/int[@name='"
+operator|+
+name|start
+operator|+
+literal|"'][.='6'  ]"
+argument_list|,
+name|pre
+operator|+
+literal|"/int[@name='"
+operator|+
+name|mid
+operator|+
+literal|"'][.='0'  ]"
+comment|//
+argument_list|,
+name|meta
+operator|+
+literal|"/long[@name='end'   ][.='"
+operator|+
+name|end
+operator|+
+literal|"']"
+argument_list|,
+name|meta
+operator|+
+literal|"/int[@name='before' ][.='0']"
+argument_list|,
+name|meta
+operator|+
+literal|"/int[@name='after'  ][.='0']"
+argument_list|,
+name|meta
+operator|+
+literal|"/int[@name='between'][.='6']"
 argument_list|)
 expr_stmt|;
 block|}
